[project]
entrypoint="main:app"
name = "vlrggapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc>=0.0.4",
    "click>=8.4.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "pydantic>=2.13.4",
    "starlette>=1.3.1",
]
