[project]
entrypoint="main:app"
name = "vlrggapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc>=0.0.4",
    "cachetools==7.1.1",
    "click>=8.4.2",
    "fastapi==0.136.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx==0.28.1",
    "lxml==6.1.0",
    "pydantic>=2.13.4",
    "selectolax==0.4.8",
    "starlette>=1.3.1",
    "uvicorn==0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]
